# hparena

./: .clang-tidy  CMakeLists.txt
.github/workflows/: build-analyze.yaml
include/hparena/: hparena.h  hparena.hpp
src/: hparena.cpp
src/benchmarks/: circular.cpp
src/empirical/: hugepages_exhausted.cpp  mmap_non_multiple.cpp
test/: CMakeLists.txt  test-hparena-c.cpp
